--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "webpack-start": "webpack serve --mode development --progress --env NODE_ENV=development"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-i18n": "^8.22.4",
