--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/cli": "^7.12.13",
     "@babel/core": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
+    "@dreysolano/prerender-spa-plugin": "^1.0.3",
     "@kazupon/vue-i18n-loader": "^0.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
